# my-notes

./: .gitignore  AppxManifest.xml  BuildMsix.cs  MyNotes.cs  NotesBridge.cs  PrivacyPolicy.html  build-msix.ps1  index.html  package-lock.json  package.json
docs/: privacy-policy.html
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  storage.rs
src/components/Chapters/: ChapterList.tsx
src/components/Layout/: Sidebar.tsx  TitleBar.tsx
src/components/Notes/: NoteEditor.tsx  TiptapEditor.tsx
src/components/Settings/: SettingsPanel.tsx
src/components/UI/: ExitDialog.tsx  SearchOverlay.tsx  TutorialOverlay.tsx
src/store/: bookStore.ts  chapterStore.ts  noteStore.ts  uiStore.ts
src/styles/: global.css
src/utils/: backup.ts  bridge.ts  db.ts
store-upload/: STORE-SUBMISSION.md  submission-info.json  tauri.conf.json
store-upload/msi/: My Neatbook_2.0.0_x64_en-US.msi
store-upload/msix/: AppxManifest.xml
